[gd_scene load_steps=8 format=2]

[ext_resource path="res://Layout.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/cross1.png" type="Texture" id=5]
[ext_resource path="res://Sidescroller.gd" type="Script" id=6]
[ext_resource path="res://Crosshair.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Crosshair"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Crosshair/Image:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Crosshair/Image:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.15, 0.15 ), Vector2( 0.1, 0.1 ) ]
}

[node name="Sidescroller" type="Node2D"]
script = ExtResource( 6 )

[node name="Layout" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 536, 240 )
Bullet = ExtResource( 4 )

[node name="Crosshair" type="CanvasLayer" parent="."]

[node name="CrosshairAnimation" type="AnimationPlayer" parent="Crosshair"]
anims/Crosshair = SubResource( 1 )

[node name="Image" type="Sprite" parent="Crosshair/CrosshairAnimation"]
position = Vector2( 408, 216 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
script = ExtResource( 7 )

[node name="WinTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="death" from="Layout" to="." method="_on_Layout_death"]
[connection signal="win" from="Layout" to="." method="_on_Layout_win"]
[connection signal="timeout" from="WinTimer" to="." method="_on_WinTimer_timeout"]
